release/bindings.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: grafana-enforce-dashboard-folder-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/grafana-enforce-dashboard-folder: deny
    objectSelector: {}
  policyName: grafana-enforce-dashboard-folder.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: grafana-enforce-dashboard-folder-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/grafana-enforce-dashboard-folder: warn
    objectSelector: {}
  policyName: grafana-enforce-dashboard-folder.vap-library.com
  validationActions:
    - Warn
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: helmrelease-enforce-fields-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/helmrelease-enforce-fields: deny
    objectSelector: {}
  paramRef:
    name: helmrelease-enforce-fields.vap-library.com
    parameterNotFoundAction: Deny
  policyName: helmrelease-enforce-fields.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: helmrelease-enforce-fields-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/helmrelease-enforce-fields: warn
    objectSelector: {}
  paramRef:
    name: helmrelease-enforce-fields.vap-library.com
    parameterNotFoundAction: Deny
  policyName: helmrelease-enforce-fields.vap-library.com
  validationActions:
    - Warn
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: httproute-enforce-hostnames-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/httproute-enforce-hostnames: deny
    objectSelector: {}
  paramRef:
    name: httproute-enforce-hostnames.vap-library.com
    parameterNotFoundAction: Deny
  policyName: httproute-enforce-hostnames.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: httproute-enforce-hostnames-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/httproute-enforce-hostnames: warn
    objectSelector: {}
  paramRef:
    name: httproute-enforce-hostnames.vap-library.com
    parameterNotFoundAction: Deny
  policyName: httproute-enforce-hostnames.vap-library.com
  validationActions:
    - Warn
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: kustomization-enforce-fields-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/kustomization-enforce-fields: deny
    objectSelector: {}
  paramRef:
    name: kustomization-enforce-fields.vap-library.com
    parameterNotFoundAction: Deny
  policyName: kustomization-enforce-fields.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: kustomization-enforce-fields-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/kustomization-enforce-fields: warn
    objectSelector: {}
  paramRef:
    name: kustomization-enforce-fields.vap-library.com
    parameterNotFoundAction: Deny
  policyName: kustomization-enforce-fields.vap-library.com
  validationActions:
    - Warn
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-enforce-type-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/service-enforce-type: deny
    objectSelector: {}
  paramRef:
    name: service-enforce-type.vap-library.com
    parameterNotFoundAction: Deny
  policyName: service-enforce-type.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-enforce-type-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/service-enforce-type: warn
    objectSelector: {}
  paramRef:
    name: service-enforce-type.vap-library.com
    parameterNotFoundAction: Deny
  policyName: service-enforce-type.vap-library.com
  validationActions:
    - Warn
---
